--- a/src/component/Style.css
+++ b/src/component/Style.css
@@ -7,17 +7,11 @@
 .Main{
     padding: 2rem;
     width: 100%;
-    
+}
 
-}
 .bgco{
-    background-color:'white';
-}
-hr { border-left: 0; }
-hr.style5 {
-	background-color: #fff;
-    border-top: 7px dashed #000000;
-    
+  background-color:'white';
+  font-family: 'Kanit', sans-serif;
 }
 .App {
   text-align: center;
@@ -60,4 +54,17 @@ hr.style5 {
 
 #Title{
   letter-spacing: 5px;
+}
+@import 'https://fonts.googleapis.com/css?family=Kanit|Prompt';
+
+h1,h2,h3,h6{
+  font-family: 'Kanit', sans-serif;
+}
+
+.container-fluid{
+  background-color:'white';
+  font-family: 'Kanit', sans-serif;
+}
+.classicformpage{
+  font-family: 'Kanit', sans-serif;
 }
